# sufra-printer

./: README.md  index.html  package.json
.github/workflows/: release.yml
docs/: README.md  architecture.md  build-and-release.md  http-contract.md  print-flow.md
scripts/: smoke-test.ps1
src/: App.vue  bridge.ts  i18n.ts  receiptHtml.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  escpos_text.rs  lib.rs  main.rs  printer.rs  server.rs  state.rs  updater.rs
