[package]
name = "sufra-printer"
version = "0.4.0"
description = "Sufra Printer — silent ESC/POS thermal printer bridge for the Sufra dashboard"
authors = ["Sufra"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sufra_printer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cross-platform config dir lookup
dirs = "5"

# HTTP bridge
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1"

# Encoding / logging
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors / sync
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
once_cell = "1"

# USB / printing
rusb = "0.9"

# Update checker
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
